--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,14 @@ allprojects {
 
 buildscript {
     ext.kotlin_version = '1.0.4'
+    ext.google_play_services_version = '3.0.0'
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath "com.google.gms:google-services:$google_play_services_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
