LOTS of additions. Refactored to have less Fragments. Added necessary drawables. Refactored layouts. Fixed bugs.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme" >
+        <!--<activity-->
+            <!--android:name=".LoginActivity"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:theme="@style/AppTheme" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EtaActivity"/>
+        <activity android:name=".PaymentActivity"/>
     </application>
 
 </manifest>
