--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
     }
     sourceSets {
         main.java.srcDirs += 'src/main_menu/kotlin'
+        main.java.srcDirs += 'src/main/kotlin'
     }
 }
 
